# imag

./: .travis.yml  default.nix  search-index.js
filters/: index.html  macro.impl_operators!.html  sidebar-items.js
git2/: constant.DEFAULT_COMMENT_CHAR.html  enum.AutotagOption.html  enum.BranchType.html  enum.ConfigLevel.html  enum.Delta.html  enum.DiffBinaryKind.html  enum.DiffFormat.html  enum.Direction.html  enum.ErrorClass.html  enum.ErrorCode.html  enum.FetchPrune.html  enum.FileFavor.html  enum.ObjectType.html  enum.PackBuilderStage.html  enum.RepositoryState.html  enum.ResetType.html  enum.StatusShow.html  enum.SubmoduleIgnore.html  fn.message_prettify.html  index.html  struct.AnnotatedCommit.html  struct.Blame.html  struct.BlameHunk.html  struct.BlameIter.html  struct.BlameOptions.html  struct.Blob.html  struct.Branch.html  struct.Branches.html  struct.Buf.html  struct.CheckoutNotificationType.html  struct.Commit.html  struct.Config.html  struct.ConfigEntries.html  struct.ConfigEntry.html  struct.Cred.html  struct.CredentialHelper.html  struct.CredentialType.html  struct.Deltas.html  struct.Describe.html  struct.DescribeFormatOptions.html  (+76 more)
imag-annotation/: Cargo.toml
imag-annotation/src/: ui.rs
libgit2_sys/: constant.GITERR_CALLBACK.html  constant.GITERR_CHECKOUT.html  constant.GITERR_CHERRYPICK.html  constant.GITERR_CONFIG.html  constant.GITERR_DESCRIBE.html  constant.GITERR_FETCHHEAD.html  constant.GITERR_FILESYSTEM.html  constant.GITERR_FILTER.html  constant.GITERR_INDEX.html  constant.GITERR_INDEXER.html  constant.GITERR_INVALID.html  (+980 more)
(+353 files in other folders)
